--- a/Mi Remote.apk/res/values-fr/strings.xml
+++ b/Mi Remote.apk/res/values-fr/strings.xml
@@ -207,7 +207,7 @@ Pour activer votre compte, suivez le
     <string name="search_more_failed">"Impossible de charger les résultats"</string>
     <string name="gesture_pad_first_line_tips">"Utilisez les boutons de volume sur votre appareil pour régler le volume de l'écran."</string>
     <string name="gesture_pad_sencond_line_tips">"Pour afficher le menu, appuyez et maintenez avec un doigt sur une zone vide de l'écran. Pour régler le volume de l'écran, faites glisser vers le haut ou vers le bas."</string>
-    <string name="gesture_pad_orietaion_tips">Glisser votre doigts en haut ou en bas et cliquer sur Ok</string>
+    <string name="gesture_pad_orietaion_tips">Pour vous déplacer, glisser votre doigt de haut en bas ou de gauche à droite et tapoter pour confirmer votre choix.</string>
     <string name="gesture_pad_vol_tips">Appuyez sur les touches de volume du téléphone pour régler le volume</string>
     <string name="airkan_disconnect">Non associé</string>
     <string name="projection_failed_for_disconnect">Non associé</string>
@@ -217,7 +217,7 @@ Pour activer votre compte, suivez le
     <string name="confirm">OK</string>
     <string name="cancel">Annuler</string>
     <string name="agree">Accepter</string>
-    <string name="power">Alimentation</string>
+    <string name="power">Mise en marche</string>
     <string name="back">Retour</string>
     <string name="menu">Menu</string>
     <string name="home">Accueil</string>
@@ -258,7 +258,7 @@ Pour activer votre compte, suivez le
     <string name="video_history_today">"Aujourd'hui"</string>
     <string name="video_history_yestoday">Hier</string>
     <string name="video_history_before_yestory">Il y a 2 jours</string>
-    <string name="video_history_earlier">Earlier</string>
+    <string name="video_history_earlier">Plus tôt</string>
     <string name="video_history_title">Historique</string>
     <string name="vendor_yaokan">Yaokan</string>
     <string name="vendor_kookong" />
@@ -279,7 +279,7 @@ Pour activer votre compte, suivez le
     <string name="carrier_data">Carrier info</string>
     <string name="sorry">Erreur</string>
     <string name="title_nodata_feedback">"Impossible d'obtenir des informations sur l'appareil"</string>
-    <string name="match_succuss">"You're all set"</string>
+    <string name="match_succuss">"Vous êtes prêt"</string>
     <string name="succeed_title">Connecté</string>
     <string name="succeed_content">Connecté %3$s %4$s avec succès.</string>
     <string name="succeed_finish">Ok</string>
@@ -348,25 +348,25 @@ Pour activer votre compte, suivez le
     <string name="choose_ac">Choisissez une télécommande</string>
     <string name="ac_gree">Gree A/C</string>
     <string name="outdoor_temp_unknown">Unknown</string>
-    <string name="unknown">Unknown</string>
-    <string name="outdoor_temp">Outdoor temp %1$d ℃</string>
-    <string name="login_done">Signed in</string>
-    <string name="login_failed">"Couldn't sign in"</string>
-    <string name="control_vol_by_cellphone">Use device to control volume</string>
+    <string name="unknown">Inconnu</string>
+    <string name="outdoor_temp">Température extérieure %1$d ℃</string>
+    <string name="login_done">Connecté en tant que</string>
+    <string name="login_failed">"Erreur lors de l'identification"</string>
+    <string name="control_vol_by_cellphone">Utiliser votre téléphone pour contrôler le volume</string>
     <string name="key_press_vibrate">Vibrer au touché</string>
     <string name="virtual_keyhboard">Utiliser le clavier du téléphone</string>
-    <string name="virtual_keyhboard_intro">"Use your device's keyboard to type on display"</string>
-    <string name="tv_mirror">Display controls</string>
-    <string name="tv_mirror_intro">Show display controls in landscape mode</string>
-    <string name="add_device_remote">Pair %1$s</string>
+    <string name="virtual_keyhboard_intro">"Utilisez le clavier de votre appareil pour taper sur l'écran"</string>
+    <string name="tv_mirror">Contrôles d\'affichage</string>
+    <string name="tv_mirror_intro">Afficher commandes d\'affichage en mode paysage</string>
+    <string name="add_device_remote">Appairage %1$s</string>
     <string name="brand_device">%1$s %2$s</string>
     <string name="province">Province</string>
-    <string name="operator">Operator</string>
-    <string name="next_step">next step</string>
-    <string name="somthing_wrong">Having problems?</string>
-    <string name="maybe_is">Make sure:</string>
-    <string name="no_network">"· You're connected to the internet"</string>
-    <string name="network_unstable">· You have a stable connection</string>
+    <string name="operator">Opérateur</string>
+    <string name="next_step">Étape suivante</string>
+    <string name="somthing_wrong">Besoin d\'aide ?</string>
+    <string name="maybe_is">Êtes-vous sûr :</string>
+    <string name="no_network">"· Vous êtes connecté à Internet"</string>
+    <string name="network_unstable">· Vous disposez d\'une connexion stable</string>
     <string name="select_device">Ajouter une télécommande</string>
     <string name="select_brand">Choisissez %s marque</string>
     <string name="press_to_match">Cliquez</string>
@@ -447,7 +447,7 @@ Pour activer votre compte, suivez le
     <string name="upgrade_current_version">Version actuelle %1s</string>
     <string name="upgrade_already_latest">Vous avez la dernière version</string>
     <string name="upgrade_loading">Téléchargement</string>
-    <string name="download_path_fail">Téléchargement échoué, vérifier le stockage de votre téléhopne</string>
+    <string name="download_path_fail">Téléchargement échoué, vérifier le stockage de votre téléphone</string>
     <string name="upgrade_later">暂不升级</string>
     <string name="upgrade_now">现在升级</string>
     <string name="upgrade_log">更新日志</string>
@@ -500,7 +500,7 @@ Pour activer votre compte, suivez le
     <string name="release_to_refresh">松开刷新...</string>
     <string name="refreshing">正在刷新...</string>
     <string name="refreshing_no_point">载入中</string>
-    <string name="pull_up_refresh">Pull up to refresh</string>
+    <string name="pull_up_refresh">Tirer vers le haut pour rafraîchir</string>
     <string name="refreshing_retry">加载失败，重试？</string>
     <string name="epg_bottom_title_textview_str">点击绑定机顶盒</string>
     <string name="epg_bottom_subtitle_textview_str">绑定机顶盒查看更多节目信息</string>
