--- a/Mi Remote.apk/res/values-fr/strings.xml
+++ b/Mi Remote.apk/res/values-fr/strings.xml
@@ -376,6 +376,8 @@ Pour activer votre compte, suivez le
     <string name="select_dvb_carrier">选择运营商</string>
     <string name="select_area">选择地区</string>
     <string name="add_control_frame">添加%1$s遥控器</string>
+    <string name="ir_device_wifi">Wi-Fi 遥控器</string>
+    <string name="ir_device_ir">红外遥控器</string>
     <string name="scene_default">默认</string>
     <string name="living_room">客厅</string>
     <string name="bedroom">卧室</string>
@@ -395,7 +397,7 @@ Pour activer votre compte, suivez le
     <string name="cool_mode">冷气</string>
     <string name="hot_mode">暖风</string>
     <string name="temperature">Température</string>
-    <string name="mute">静音</string>
+    <string name="mute">Mute</string>
     <string name="volume">﻿Volume</string>
     <string name="channel">Chaine</string>
     <string name="exit">Sortir</string>
@@ -468,8 +470,8 @@ Pour activer votre compte, suivez le
     <string name="feedback">Commentaire</string>
     <string name="check_upgrade">Vérifiez les mise à jour</string>
     <string name="current_version_frame">Version actuelle %s</string>
-    <string name="faq">常见问题</string>
-    <string name="diagnose">异常诊断</string>
+    <string name="faq">FAQ</string>
+    <string name="diagnose">Diagnostic</string>
     <string name="current_version_latest">Vous utilisez la dernière version</string>
     <string name="to_qq">启动QQ加入群组</string>
     <string name="to_qq_maintext">加入群组快速反馈意见</string>
@@ -513,4 +515,30 @@ Pour activer votre compte, suivez le
     <string name="no_program">暂无节目</string>
     <string name="no_introduction">暂时没有简介</string>
     <string name="play_on_tv">在电视上播放</string>
+    <string name="open">开</string>
+    <string name="close">关</string>
+    <string name="open_close">开关</string>
+    <string name="fan_speed">风速</string>
+    <string name="anion">负离子</string>
+    <string name="timer">定时</string>
+    <string name="oscillation">摇头</string>
+    <string name="fan_mode">风类</string>
+    <string name="more">更多</string>
+    <string name="by_position">按照位置</string>
+    <string name="all_brand">全部品牌</string>
+    <string name="device_responsed">有响应</string>
+    <string name="start_match">开始匹配</string>
+    <string name="match_guide_main_frame">手机请对准%1$s</string>
+    <string name="match_guide_sub_frame">成功匹配%1$d个键即可遥控</string>
+    <string name="network_diagnosis">Diagnostic du réseau</string>
+    <string name="start_diagnosis">Commencer</string>
+    <string name="stop_diagnosis">Arrêter</string>
+    <string name="repeat_diagnosis">Réessayer</string>
+    <string name="report_problem">Reporter un problème</string>
+    <string name="network_ok">Connection au réseau correcte</string>
+    <string name="diagnosis_intro">Diagnostique du réseau</string>
+    <string name="data_request_error">数据获取异常</string>
+    <string name="network_no_connection">Réseau non connecté. Vérifiez vos régalges réseaux</string>
+    <string name="match_count_frame">匹配第%1$d套遥控器</string>
+    <string name="match_total_frame">共%1$d套</string>
 </resources>
