--- a/MiFit/res/values-fr/strings.xml
+++ b/MiFit/res/values-fr/strings.xml
@@ -80,57 +80,57 @@ wait for 5s"</string>
     <string name="shoes_fetching_failed">Failed</string>
     <string name="data_not_supported">--</string>
     <string name="running_helper">"Suivi d'itinéraire"</string>
-    <string name="running_no_gps">Use GPS to keep track of your route.</string>
-    <string name="running_set_speed">Set speed</string>
-    <string name="running_speed">Speed</string>
+    <string name="running_no_gps">Utilisez le GPS pour garder une trace de votre trajet.</string>
+    <string name="running_set_speed">Réglage de la vitesse</string>
+    <string name="running_speed">Vitesse</string>
     <string name="running_speed_with_unit">km/h</string>
-    <string name="running_real_time_pace">Pace (km)</string>
-    <string name="running_pace">Pace</string>
-    <string name="running_pace_lable">Pace</string>
-    <string name="running_set_goal">Goal reminder</string>
-    <string name="running_set_dist">Distance reminder</string>
+    <string name="running_real_time_pace">Rythme (km)</string>
+    <string name="running_pace">Rythme</string>
+    <string name="running_pace_lable">Rythme</string>
+    <string name="running_set_goal">"Rappel de l'objectif"</string>
+    <string name="running_set_dist">Rappel de la distance</string>
     <string name="running_speed_detail">%.2fkm/h</string>
     <string name="running_pace_detail">%s/km</string>
     <string name="running_distance_detail">%.2fkm</string>
-    <string name="running_distance_desc">Kilometers</string>
-    <string name="running_time_desc">Time</string>
-    <string name="running_start">Start</string>
+    <string name="running_distance_desc">Kilomètres</string>
+    <string name="running_time_desc">Temps</string>
+    <string name="running_start">Commencer</string>
     <string name="running_pause">Pause</string>
-    <string name="running_long_press_to_pause">Long Press To Pause</string>
-    <string name="running_resume">Resume</string>
+    <string name="running_long_press_to_pause">Pause : appuie long</string>
+    <string name="running_resume">Reprendre</string>
     <string name="running_stop">Stop</string>
-    <string name="running_gps_turnon">Turn on</string>
-    <string name="running_gps_cancel">Cancel</string>
-    <string name="running_settings">Settings</string>
-    <string name="running_history">History</string>
-    <string name="running_slider_prompt">>>>Slide right to unlock</string>
+    <string name="running_gps_turnon">Activer</string>
+    <string name="running_gps_cancel">Annuler</string>
+    <string name="running_settings">Réglages</string>
+    <string name="running_history">Historique</string>
+    <string name="running_slider_prompt">>>>Glisser pour déverrouiller</string>
     <string name="running_distance">Distance</string>
     <string name="running_distance_unit">Distance(km)</string>
-    <string name="running_average_speed">Average</string>
-    <string name="running_step">Steps</string>
+    <string name="running_average_speed">Moyenne</string>
+    <string name="running_step">Pas</string>
     <string name="running_altitude">Altitude</string>
-    <string name="running_burn">Burn</string>
-    <string name="running_start_time">Start</string>
+    <string name="running_burn">Brulé</string>
+    <string name="running_start_time">Commencer</string>
     <string name="running_end_time">End</string>
     <string name="running_history_title">History</string>
     <string name="running_history_date" formatted="false">%d/%d/%d</string>
-    <string name="running_history_no_data">No data</string>
-    <string name="running_history_no_more_data">No more data</string>
-    <string name="running_history_no_data_refresh">Tap to refresh</string>
-    <string name="running_history_no_data_refreshing">Refreshing…</string>
+    <string name="running_history_no_data">Pas de données</string>
+    <string name="running_history_no_more_data">Pas de données</string>
+    <string name="running_history_no_data_refresh">Appuyer pour actualiser</string>
+    <string name="running_history_no_data_refreshing">Actualisation…</string>
     <string name="running_cost_cal">%.1f cal</string>
-    <string name="running_prepare_map">Preparing data for sharing…</string>
+    <string name="running_prepare_map">Préparation des données pour le partage…</string>
     <string name="running_prompt_per_kilometer" formatted="false">You have run %s kilometers. It cost %s. The pace is %s.%s</string>
-    <string name="running_prompt_great">Great!!</string>
+    <string name="running_prompt_great">Bien!!</string>
     <string name="running_prompt_come_on">Go!!</string>
     <string name="running_kilometers">km</string>
     <string name="running_per_kilometers">/km</string>
     <string name="running_kilometers_per_hour">km/h</string>
-    <string name="running_gps_locating">GPS locating…</string>
-    <string name="running_set_pace">Set pace</string>
-    <string name="running_lable_miles_fastest">Km fastest</string>
-    <string name="running_lable_km_slowest">Km slowest</string>
-    <string name="running_share">Share</string>
+    <string name="running_gps_locating">Localisation GPS…</string>
+    <string name="running_set_pace">Régler votre rythme</string>
+    <string name="running_lable_miles_fastest">Km le plus rapide</string>
+    <string name="running_lable_km_slowest">Km le plus lent</string>
+    <string name="running_share">Partager</string>
     <string name="running_watermark">Watermark</string>
     <string name="sport_ranking_desc_poor">%s: Most users placed ahead of you.</string>
     <string name="sport_ranking_desc_normal" formatted="false">Vous avez placé &lt;b>%s&lt;/b> en dehors de %s utilisateurs.</string>
@@ -140,6 +140,22 @@ wait for 5s"</string>
     <string name="login">Se connecter</string>
     <string name="logining">Connexion…</string>
     <string name="welcome">Bonjour</string>
+    <string name="running_btn_confirm">Oui</string>
+    <string name="running_btn_continue">Non</string>
+    <string name="running_short_track_desc">You only ran %d meters. Cancel your run now?</string>
+    <string name="running_no_track_desc">Cancel run?</string>
+    <string name="running_stop_sport_confirm">Stop activity?</string>
+    <string name="running_set_pace_desc">Votre Mi Band will vibrera si votre rythm est inférieur à</string>
+    <string name="running_gps_poor_signal">Poor GPS signal. Make sure you have an unobstructed view of the sky.</string>
+    <string name="running_cal_with_unit">Cal</string>
+    <string name="running_cal_desc">Burn</string>
+    <string name="running_cal_burnt">%d Cal</string>
+    <string name="running_step_frequency">Steps/min</string>
+    <string name="running_marathon_cost_time">Marathon time: %s</string>
+    <string name="running_label_hint">Title input</string>
+    <string name="running_sport_state_sr_tips">Auto paused, switch to resume once running</string>
+    <string name="running_auto_pause">Détection de pause automatique</string>
+    <string name="running_auto_pause_desc">Stop collecting info when run is paused</string>
     <string name="login_failed">Impossible de se connecter</string>
     <string name="failed_enable_bt">Veuillez activer le Bluetooth.</string>
     <string name="search_bracelet">Recherche…</string>
