--- a/MiFit/res/values-fr/strings.xml
+++ b/MiFit/res/values-fr/strings.xml
@@ -96,7 +96,7 @@ wait for 5s"</string>
     <string name="running_time_desc">Temps</string>
     <string name="running_start">Commencer</string>
     <string name="running_pause">Pause</string>
-    <string name="running_long_press_to_pause">Pause : appuie long</string>
+    <string name="running_long_press_to_pause">Pause : App. long</string>
     <string name="running_resume">Reprendre</string>
     <string name="running_stop">Stop</string>
     <string name="running_gps_turnon">Activer</string>
@@ -112,7 +112,7 @@ wait for 5s"</string>
     <string name="running_burn">Brulé</string>
     <string name="running_start_time">Commencer</string>
     <string name="running_end_time">End</string>
-    <string name="running_history_title">History</string>
+    <string name="running_history_title">Historique</string>
     <string name="running_history_date" formatted="false">%d/%d/%d</string>
     <string name="running_history_no_data">Pas de données</string>
     <string name="running_history_no_more_data">Pas de données</string>
@@ -142,21 +142,131 @@ wait for 5s"</string>
     <string name="welcome">Bonjour</string>
     <string name="running_btn_confirm">Oui</string>
     <string name="running_btn_continue">Non</string>
-    <string name="running_short_track_desc">You only ran %d meters. Cancel your run now?</string>
-    <string name="running_no_track_desc">Cancel run?</string>
-    <string name="running_stop_sport_confirm">Stop activity?</string>
-    <string name="running_set_pace_desc">Votre Mi Band will vibrera si votre rythm est inférieur à</string>
-    <string name="running_gps_poor_signal">Poor GPS signal. Make sure you have an unobstructed view of the sky.</string>
+    <string name="running_short_track_desc">Vous avez seulement fait %d mètres. Annuler?</string>
+    <string name="running_no_track_desc">Annuler?</string>
+    <string name="running_stop_sport_confirm">Arrêter?</string>
+    <string name="running_set_pace_desc">Votre Mi Band vibrera si votre rythme est inférieur à</string>
+    <string name="running_gps_poor_signal">Mauvais signal GPS.</string>
     <string name="running_cal_with_unit">Cal</string>
     <string name="running_cal_desc">Burn</string>
     <string name="running_cal_burnt">%d Cal</string>
-    <string name="running_step_frequency">Steps/min</string>
+    <string name="running_step_frequency">Pas/min</string>
     <string name="running_marathon_cost_time">Marathon time: %s</string>
     <string name="running_label_hint">Title input</string>
     <string name="running_sport_state_sr_tips">Auto paused, switch to resume once running</string>
     <string name="running_auto_pause">Détection de pause automatique</string>
     <string name="running_auto_pause_desc">Stop collecting info when run is paused</string>
     <string name="login_failed">Impossible de se connecter</string>
+    <string name="running_failed_to_get_history_neterror">"connection réseau impossible"</string>
+    <string name="running_get_history_no_more_data">Pas de donnée</string>
+    <string name="running_delete_track_item_confirm">"Records can't be restored."</string>
+    <string name="running_backgroud_notification">Running…</string>
+    <string name="running_volumn_notice">Low media volum for kilometer speech, please adjust it in Music/Settings</string>
+    <string name="running_share_to_mypace">My Pace</string>
+    <string name="running_share_to_sport_trace">My sport trace</string>
+    <string name="running_share_to_watermark">My watermark photo</string>
+    <string name="running_watermark_search_location">\#Loading your location#</string>
+    <string name="running_watermark_btn_confirm">Ok</string>
+    <string name="running_watermark_guide_tips">Touch to move</string>
+    <string name="running_no_bracelet_tips">(only available when Mi Band connected)</string>
+    <string name="running_contour_track_failed_to_create">Failed to share, please check storage left.</string>
+    <string name="running_signal_strong">Disponible</string>
+    <string name="running_signal_weak">Indisponible</string>
+    <string name="running_signal_none">Désactivé</string>
+    <string name="running_name">Running</string>
+    <string name="running_unit_kilometer">km</string>
+    <string name="running_unit_meter">m</string>
+    <string name="running_unit_calorie">cal</string>
+    <string name="running_unit_step">pass</string>
+    <string name="running_unit_weight">kg</string>
+    <string name="running_unit_hour">h</string>
+    <string name="running_hour_1">" "</string>
+    <string name="running_unit_min">min</string>
+    <string name="running_unit_min_short">m</string>
+    <string name="running_unit_sec_short">s</string>
+    <string name="running_unit_mile">miles</string>
+    <string name="running_state_paused">Pause</string>
+    <string name="running_state_stopped">Stop</string>
+    <string name="running_data_loading">Chargement…</string>
+    <string name="running_confirm">Ok</string>
+    <string name="running_share_to_title">Mi Band</string>
+    <string name="running_come_from_xiaomi_bracelet">Mi Fit</string>
+    <string name="running_hour">%dh</string>
+    <string name="running_min">%dm</string>
+    <string name="running_sec">%ds</string>
+    <string name="running_hour_min" formatted="false">%dh %dm</string>
+    <string name="running_hour_sec" formatted="false">%dh %ds</string>
+    <string name="running_min_sec" formatted="false">%dm %ds</string>
+    <string name="running_hour_min_sec" formatted="false">%dh %dm %ds</string>
+    <string name="running_share_to_topic">\#Mi Fit#</string>
+    <string name="running_date_today">"Aujourd'hui"</string>
+    <string name="running_date_yesterday">Hier</string>
+    <string name="running_date_this_week">Cette semaine</string>
+    <string name="running_date_last_week">La semaine dernière</string>
+    <string name="running_date_this_month">Ce mois</string>
+    <string name="running_date_last_month">Le mois dernier</string>
+    <string name="running_kilometer">km</string>
+    <string name="running_pound">pound</string>
+    <string name="running_mile">mile</string>
+    <string name="running_kg">kg</string>
+    <string name="running_today_null" />
+    <string name="running_year_null" />
+    <string name="running_unlogin_notice">"Your data won't be synced to Mi Cloud. Sign in now?"</string>
+    <string name="running_btn_start">Commencer</string>
+    <string name="running_btn_history">Historique</string>
+    <string name="running_main_go_now">Go</string>
+    <string name="running_main_startup_title1">"Allez à l'extérieur et commencez à courrir"</string>
+    <string name="running_main_startup_subtitle1">To record accuracy running data</string>
+    <string name="running_main_startup_subtitle2">use GPS and miband</string>
+    <string name="running_main_title">Running</string>
+    <string name="running_main_mileage">%1$d/%2$dkm</string>
+    <string name="running_main_mileage_one">%1$skm</string>
+    <string name="running_main_gps_prefix">GPS:</string>
+    <string name="running_settings_speed">(%1$s/km)</string>
+    <string name="running_settings_speed_br">(%1$s/mile)</string>
+    <string name="running_main_gps_cannot_record">"Votre GPS n'est pas disponible"</string>
+    <string name="running_main_avoid_use_indoor">"Ne pas l'utiliser à l'intérieur"</string>
+    <string name="running_main_go_outdoor">"Allez à l'extérieur"</string>
+    <string name="running_main_back_button_in_dialog">Retour</string>
+    <string name="running_main_continue_button_in_dialog">Continuer</string>
+    <string name="running_history_total_distance">Distance(km)</string>
+    <string name="running_history_total_distance_br">Distance(mile)</string>
+    <string name="running_history_total_times">Total(times)</string>
+    <string name="running_history_total_calorie">Heat(kilocalorie)</string>
+    <string name="running_history_group_time_format">yyyy MM</string>
+    <string name="running_history_group_distance">%1$.2fkm</string>
+    <string name="running_history_group_distance_br">%1$.2fmile</string>
+    <string name="running_history_child_date_format">%1$d</string>
+    <string name="running_synchronous">Synchronous</string>
+    <string name="running_unsynchronous">Unsynchronous</string>
+    <string name="running_detail_time_cost_desc">Time Cost</string>
+    <string name="running_detail_pace_desc">Min/Km</string>
+    <string name="running_detail_step_frequency_desc">Freq. de pas</string>
+    <string name="running_detail_forefoot_desc">Forefoot</string>
+    <string name="running_detail_speed_desc">Km/H</string>
+    <string name="running_detail_cal_desc">Calorie</string>
+    <string name="running_detail_title">Rythme</string>
+    <string name="running_detail_menu_share_title">Share</string>
+    <string name="running_num_unknown">--</string>
+    <string name="running_normal_mode">Normal</string>
+    <string name="running_map_mode">Carte</string>
+    <string name="running_gps_main_statistics_cost_time_disc">Durée</string>
+    <string name="running_gps_main_statistics_speed_disc">Vit.(min/km)</string>
+    <string name="running_gps_main_statistics_speed_disc_br">Vit.(min/mile)</string>
+    <string name="running_gps_main_statistics_pace_freq">Rythme(pas/min)</string>
+    <string name="running_gps_main_finish_btn_text">Terminer</string>
+    <string name="running_gps_main_continue_btn_text">Continuer</string>
+    <string name="tag_action_tips">在%s的过程中，请确保手环和手机保持在5米的范围内，并且中间不要隔墙，以确保标注成功。</string>
+    <string name="tag_doing_label">%s中…</string>
+    <string name="tag_connection">正在连接手环</string>
+    <string name="tag_waiting">请稍后………</string>
+    <string name="tag_connection_f">连接失败，点击重试</string>
+    <string name="tag_connection_f1">请将手环靠近手机</string>
+    <string name="tag_error_notice">"手环与app连接断开，标注失败，请确保手环
+与app在5米以内，且不隔墙,再次开始标注"</string>
+    <string name="register">Create Mi Account</string>
+    <string name="login">Sign in</string>
+    <string name="logining">Signing in…</string>
     <string name="failed_enable_bt">Veuillez activer le Bluetooth.</string>
     <string name="search_bracelet">Recherche…</string>
     <string name="connect_bracelet_now">Connexion…</string>
@@ -331,7 +441,7 @@ soit environ 12,000 pas par jour pour un mode de vie sain."</string>
     <string name="stat_step_daily">Étapes quotidiennes</string>
     <string name="stat_step_distance_daily">Distance quotidienne</string>
     <string name="stat_step_calorie_daily">Brûler par jours</string>
-    <string name="stat_step_piece">Étapes</string>
+    <string name="stat_step_piece">Nbre de Pas</string>
     <string name="stat_step_distance_piece">Distance</string>
     <string name="stat_step_calorie_piece">Cal</string>
     <string name="stat_step_walk_distance">Distance à pied</string>
@@ -433,7 +543,7 @@ soit environ 12,000 pas par jour pour un mode de vie sain."</string>
     <string name="dynamic_title_weight">Poids</string>
     <string name="dynamic_title_bracelet_unbind">Band not paired</string>
     <string name="dynamic_title_weight_unbind">Poids</string>
-    <string name="dynamic_step_tip">Étapes</string>
+    <string name="dynamic_step_tip">Nbre de pas</string>
     <string name="dynamic_sleep_tip">Total</string>
     <string name="dynamic_sleep_deep_title">Sommeil profond %s</string>
     <string name="dynamic_detail_sleep_title">%s</string>
@@ -1228,7 +1338,7 @@ Use Mi Scale to record your infant's weight"</string>
     <string name="title_action_tag_agreement">"Conditions générales d'utilisation"</string>
     <string name="complete">Terminé</string>
     <string name="notice_for_tag_time">Number of times marked</string>
-    <string name="tag_start">Start</string>
+    <string name="tag_start">Commencer</string>
     <string name="tag_connect">Connect</string>
     <string name="tag_wait">Waiting</string>
     <string name="tag_finish">Finished</string>
