Traduction nouvelle version

--- a/XiaoYi-Cam/res/values-fr/strings.xml
+++ b/XiaoYi-Cam/res/values-fr/strings.xml
@@ -32,6 +32,27 @@
     <string name="common_open_on_phone">Ouvrir sur le téléphone</string>
     <string name="common_signin_button_text">Connexion</string>
     <string name="common_signin_button_text_long">Se connecter avec Google</string>
+    <string name="Authorization_success">Autorisation réussie !</string>
+    <string name="UMAppUpdate">Mise à jour App</string>
+    <string name="UMBreak_Network">Vérifier votre connection à internet, mise à jour annulée</string>
+    <string name="UMDialog_InstallAPK">La dernière version a été téléchargée, installez la maintenant ?</string>
+    <string name="UMExit">"Quittez l'application"</string>
+    <string name="UMForceUpdate">Forcer la mise à jour!</string>
+    <string name="UMGprsCondition">(Attention: État Wi-Fi)</string>
+    <string name="UMIgnore">Ignorer cette version</string>
+    <string name="UMNewVersion">Dernière version:</string>
+    <string name="UMNotNow">Pas maintenant</string>
+    <string name="UMTargetSize">Taille:</string>
+    <string name="UMToast_IsUpdating">Mise à jour....</string>
+    <string name="UMUpdateContent">Mise à jour du contenu</string>
+    <string name="UMUpdateNow">Mettre à jour</string>
+    <string name="UMUpdateSize">Taille mise à jour:</string>
+    <string name="UMUpdateTitle">Mise à jour disponbile</string>
+    <string name="Upgrade_failed">Mise à jour échouée</string>
+    <string name="Vertical">选择竖屏</string>
+    <string name="about">A propos</string>
+    <string name="account_format_err">"Erreur dans le format de l'adresse e-mail"</string>
+    <string name="account_length_err">"Le nom d'utilisateur est trop long (1-40)"</string>
     <string name="app_name">XiaoYi Caméra</string>
     <string name="login">Se connecter</string>
     <string name="refresh">Actualiser</string>
@@ -293,8 +314,6 @@
     <string name="repasserr">Les mots de passe ne correspondent pas</string>
     <string name="ver_code_null">Le code de vérification ne peut être vide</string>
     <string name="account_must_email">(Utiliser un e-mail pour le compte)</string>
-    <string name="account_format_err">"Erreur dans le format de l'adresse e-mail"</string>
-    <string name="account_length_err">"Le nom d'utilisateur est trop long (1-40)"</string>
     <string name="password_must_true">(Doit être composé 6-24 caractères)</string>
     <string name="password_format_err">Le mot de passe est trop long (6-24)</string>
     <string name="nickname_cant_be_null">Le pseudo ne peut être vide</string>
@@ -313,7 +332,6 @@
     <string name="qq_login">Compte QQ</string>
     <string name="weibo_login">Compte Weibo</string>
     <string name="success_to_login">Identification réussie !</string>
-    <string name="Authorization_success">Autorisation réussie !</string>
     <string name="through_power_orange_light">Allumer la caméra et attendre que la led orange clignote</string>
     <string name="through_power_orange_light2">"Patienter jusqu'à entendre
 \"wait for connection\""</string>
@@ -942,21 +960,6 @@ supporte la vision nocturne.</string>
     <string name="umeng_common_download_finish">"Téléchargement terminé, cliquer pour l'installer."</string>
     <string name="umeng_common_patch_finish">"Patch Terminé, cliquer pour l'installer."</string>
     <string name="umeng_common_icon">icon</string>
-    <string name="UMBreak_Network">Vérifier votre connection à internet, mise à jour annulée</string>
-    <string name="UMUpdateTitle">Mise à jour disponbile</string>
-    <string name="UMNewVersion">Dernière version:</string>
-    <string name="UMUpdateContent">Mise à jour du contenu</string>
-    <string name="UMUpdateSize">Taille mise à jour:</string>
-    <string name="UMTargetSize">Taille:</string>
-    <string name="UMGprsCondition">(Attention: État Wi-Fi)</string>
-    <string name="UMUpdateNow">Mettre à jour</string>
-    <string name="UMAppUpdate">Mise à jour App</string>
-    <string name="UMNotNow">Pas maintenant</string>
-    <string name="UMIgnore">Ignorer cette version</string>
-    <string name="UMExit">"Quittez l'application"</string>
-    <string name="UMToast_IsUpdating">Mise à jour....</string>
-    <string name="UMDialog_InstallAPK">La dernière version a été téléchargée, installez la maintenant ?</string>
-    <string name="UMForceUpdate">Forcer la mise à jour!</string>
     <string name="umeng_xp_size">Taille</string>
     <string name="umeng_xp_action_open">Allumer</string>
     <string name="umeng_xp_action_browse">Parcourir</string>
